bugfix: blurry mdl-tooltip http://giphy.com/gifs/charlotte-nigel-kristencorpserawr-hGmv9VWZyvbdC

--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -1438,3 +1438,7 @@ input.link {
         }
     }
 }
+
+.mdl-tooltip {
+    will-change: unset;
+}
